# MultiagentConnectedPathPlanning

./: .gitignore  CMakeLists.txt  README.md  package.xml
connected_mrpp/: .cproject  .project  CMakeLists.txt  b-w-open_data.csv  offices_data.csv  package.xml  results_first_set.txt
connected_mrpp/charts/: b-w-open_200  b-w-open_50  b-w-open_latex_tab.tex  offices_100  offices_150  offices_200  offices_25  offices_50  offices_latex_tab.tex  tables.tex
connected_mrpp/data/: b-w-open_comm_uniform_grid_13_range_25.graphml  b-w-open_comm_uniform_grid_13_range_50.graphml  b-w-open_phys_uniform_grid_13_range_50.graphml  b-w-open_uniform_grid_13_range_100_10_0.exp  b-w-open_uniform_grid_13_range_100_10_1.exp  b-w-open_uniform_grid_13_range_100_10_10.exp  b-w-open_uniform_grid_13_range_100_10_11.exp  b-w-open_uniform_grid_13_range_100_10_12.exp  b-w-open_uniform_grid_13_range_100_10_13.exp  b-w-open_uniform_grid_13_range_100_10_14.exp  b-w-open_uniform_grid_13_range_100_10_15.exp  b-w-open_uniform_grid_13_range_100_10_16.exp  b-w-open_uniform_grid_13_range_100_10_17.exp  b-w-open_uniform_grid_13_range_100_10_18.exp  b-w-open_uniform_grid_13_range_100_10_19.exp  b-w-open_uniform_grid_13_range_100_10_2.exp  b-w-open_uniform_grid_13_range_100_10_20.exp  b-w-open_uniform_grid_13_range_100_10_21.exp  b-w-open_uniform_grid_13_range_100_10_22.exp  b-w-open_uniform_grid_13_range_100_10_23.exp  b-w-open_uniform_grid_13_range_100_10_24.exp  b-w-open_uniform_grid_13_range_100_10_25.exp  b-w-open_uniform_grid_13_range_100_10_26.exp  b-w-open_uniform_grid_13_range_100_10_27.exp  b-w-open_uniform_grid_13_range_100_10_28.exp  b-w-open_uniform_grid_13_range_100_10_29.exp  b-w-open_uniform_grid_13_range_100_10_3.exp  b-w-open_uniform_grid_13_range_100_10_30.exp  b-w-open_uniform_grid_13_range_100_10_31.exp  b-w-open_uniform_grid_13_range_100_10_32.exp  b-w-open_uniform_grid_13_range_100_10_33.exp  b-w-open_uniform_grid_13_range_100_10_34.exp  b-w-open_uniform_grid_13_range_100_10_35.exp  b-w-open_uniform_grid_13_range_100_10_36.exp  b-w-open_uniform_grid_13_range_100_10_37.exp  b-w-open_uniform_grid_13_range_100_10_38.exp  b-w-open_uniform_grid_13_range_100_10_39.exp  b-w-open_uniform_grid_13_range_100_10_4.exp  b-w-open_uniform_grid_13_range_100_10_40.exp  b-w-open_uniform_grid_13_range_100_10_41.exp  (+4506 more)
connected_mrpp/include/connected_mrpp/: Cell.h  CommandLineParser.h  Configuration.h  Experiment.h  FrontierNode.h  Graph.h  Grid.h  Planner.h  PriorityQueue.h  ThetaStarPlanner.h
connected_mrpp/include/connected_mrpp/graph/: GenericGraph.h  Graph.h  Grid.h
connected_mrpp/include/connected_mrpp/map/: Bounds.h  DebugMap.h  Map.h  ROSMap.h
connected_mrpp/include/connected_mrpp/planner/: AbstractPlanner.h  Astar.h  Birk.h  Configuration.h  DFS_Planner.h  GreedyRandomized.h  IterativePlanner.h  LazyPlanner.h  Objective.h  Planner.h  RestartingGreedyRandomized.h  SampleBasedPlanner.h  SamplingStrategy.h
connected_mrpp/include/connected_mrpp/queue/: FrontierNode.h  PriorityQueue.h
connected_mrpp/include/connected_mrpp/utils/: RandomGenerator.h
connected_mrpp/scripts/: build_batch_experiments.py  create_experiment.py  create_graph_from_png.py  parse_logs.py  plot_data.py  run_batch_experiments.py  run_test.py  utils.py  visualize_plan.py
connected_mrpp/src/: AbstractPlanner.cpp  Astar.cpp  Birk.cpp  CommandLineParser.cpp  Configuration.cpp  DFS_planner.cpp  Experiment.cpp  GenericGraph.cpp  Graph.cpp  GreedyRandomized.cpp  Grid.cpp  IterativePlanner.cpp  LazyPlanner.cpp  Objective.cpp  Planner.cpp  PriorityQueue.cpp  RandomGenerator.cpp  RestartingGreedyRandomized.cpp  SampleBasedPlanner.cpp  SamplingStrategy.cpp  ThetaStarPlanner.cpp  testGeneral.cpp
